2008-02-22  Nick Clifton  <nickc@redhat.com>

	* gas/m68hc11/bug-1825.d: Update to match changes in the
	information generated with source-in-disassembly listings.
	* gas/m68hc11/indexed12.d: Likewise.
	* gas/m68hc11/insns-dwarf2.d: Likewise.
	* gas/m68hc11/lbranch-dwarf2.d: Likewise.

2008-02-18  H.J. Lu  <hongjiu.lu@intel.com>

	* cfi/cfi.exp (gas_x86_64_check): New.
	(gas_x86_32_check): Likewise.
	Run 32bit and 64bit tests for x86 targets if they are supportd.

2008-02-18  Jan Beulich  <jbeulich@novell.com>

	* gas/i386/att-regs.s, gas/i386/att-regs.d,
	gas/i386/intel-regs.s, gas/i386/intel-regs.d: New.
	* gas/i386/i386.exp: Run new tests.

2008-02-14  Nick Clifton  <nickc@redhat.com>

	PR gas/5712
	* gas/arm/fp-save.s: New test.
	* gas/arm/fp-save.d: Expected disassembly.

2008-02-13  Adam Nemet  <anemet@caviumnetworks.com>

	* gas/mips/branch-misc-2pic-64.d (#name): Have a unique name
	different from the branch-misc-2-64.d test.

2008-02-13  Jan Beulich  <jbeulich@novell.com>

	* gas/i386/intelok.s: Replace invalid offset expression with
	valid ones.
	* gas/i386/x86_64.s: Likewise.

2008-02-13  Jan Beulich  <jbeulich@novell.com>

	* gas/i386/intelbad.s, gas/i386/intelok.s: Add 'bound' tests.
	* gas/i386/intelbad.l, gas/i386/intelok.l, gas/i386/intelok.e,
	gas/i386/opcode-intel.d: Adjust.

2008-02-13  Jan Beulich  <jbeulich@novell.com>

	* gas/cfi/cfi-i386.s: Add code testing use of all registers.
	Fix a few comments.
	* gas/cfi/cfi-x86_64.s: Likewise.
	* gas/cfi/cfi-i386.d, gas/cfi/cfi-x86_64.d: Adjust.

2008-02-12  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/i386/i386.exp: Run x86-64-arch-2 instead of
	x86-64-arch-10.

	* gas/i386/x86-64-arch-10.d: Removed.

	* gas/i386/x86-64-arch-2.d: New.
	* gas/i386/x86-64-arch-2.s: Likewise.

2008-02-12  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/i386/x86-64-xsave.d: Remove prefix.

2008-02-11  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/i386/arch-10.s: Add xgetbv.

	* gas/i386/arch-10.d: Updated.
	* gas/i386/arch-10-1.l: Likewise.