@@ -8,7 +8,9 @@
 	jmp	*%edi
 	jmp	*(%edi)
 	ljmp	*xxx(,%edi,4)
+	ljmpw	*xxx(,%edi,4)
 	ljmp	*xxx
+	ljmpw	*xxx
 	ljmp	$0x1234,$xxx
 
 	call	1b
@@ -17,8 +19,15 @@
 	call	*%edi
 	call	*(%edi)
 	lcall	*xxx(,%edi,4)
+	lcallw	*xxx(,%edi,4)
 	lcall	*xxx
+	lcallw	*xxx
 	lcall	$0x1234,$xxx
 
-	# Force a good alignment.
-	.p2align	4,0
+	.intel_syntax noprefix
+	call	word ptr [ebx]
+	call	dword ptr [ebx]
+	call	fword ptr [ebx]
+	jmp	word ptr [ebx]
+	jmp	dword ptr [ebx]
+	jmp	fword ptr [ebx]
