@@ -27,7 +27,9 @@
 	jmp	*%di
 	jmp	*(%di)
 	ljmp	*xxx(%di)
+	ljmpl	*xxx(%di)
 	ljmp	*xxx
+	ljmpl	*xxx
 	ljmp	$0x1234,$xxx
 
 	call	1b
@@ -36,8 +38,15 @@
 	call	*%di
 	call	*(%di)
 	lcall	*xxx(%di)
+	lcalll	*xxx(%di)
 	lcall	*xxx
+	lcalll	*xxx
 	lcall	$0x1234,$xxx
 
-	# Force a good alignment.
-	.p2align	4,0
+	.intel_syntax noprefix
+	call	word ptr [bx]
+	call	dword ptr [bx]
+	call	fword ptr [bx]
+	jmp	word ptr [bx]
+	jmp	dword ptr [bx]
+	jmp	fword ptr [bx]
