@@ -1,3 +1,9 @@
+2008-02-23  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* i386-opc.tbl: Disallow 16-bit near indirect branches for
+	x86-64.
+	* i386-tbl.h: Regenerated.
+
 2008-02-21  Jan Beulich  <jbeulich@novell.com>
 
 	* i386-opc.tbl: Allow Dword for far indirect call. Allow Dword
